# distributed-counter

./: Makefile  README.md  pyproject.toml
counter/: service.py
tests/: test_service.py
