[project]
name = "distributed-counter"
version = "0.1.0"
description = "A distributed counter service using Raft consensus"
authors = [
    {name = "Arun Raghunath"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    "pysyncobj (>=0.3.15,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.10,<0.16.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry]
packages = [{include = "counter"}]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = "pysyncobj"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["counter"]
